# qlib-research-workbench

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  config.yaml  pyproject.toml  requirements-qlib.txt  requirements.txt  roll.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAWTEAM.md  COMMANDS.md  DEVELOPMENT.md  README_CN.md  ROADMAP.md
qlib_assistant_refactor/: __init__.py  akshare_sync.py  app.py  backup_utils.py  clawteam_adapter.py  clawteam_runner.py  cli.py  config.py  data_cli.py  data_service.py  feed_sync.py  model_cli.py  qlib_check.py  qlib_dump.py  qlib_env.py  qlib_handlers.py  qlib_processors.py  roll_cli.py  task_factory.py  train_cli.py
scripts/: clawteam_common.sh  clawteam_daily_runner.py  clawteam_events_sync.sh  clawteam_export_reports.sh  clawteam_fundamentals_sync.sh  clawteam_market_sync.sh  clawteam_post_close.py  clawteam_refresh_sse180.sh  clawteam_train_start.sh  clawteam_verify_freshness.sh  mock_clawteam_agent.sh  qlib_smoke.py  setup_clawteam_env.sh  smoke_test.py
tests/: test_akshare_sync.py  test_app.py  test_backup_utils.py  test_clawteam_adapter.py  test_clawteam_runner.py  test_cli_parsers.py  test_data_cli.py  test_data_service.py  test_feed_sync.py  test_model_cli.py  test_qlib_dump.py  test_task_factory.py
